<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:hint="@string/register_hint_lastname"/>

            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_margin="8dp"
                android:hint="@string/register_hint_firstname"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:hint="@string/register_hint_email"/>

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:hint="@string/register_hint_phone"
                android:inputType="phone"
                android:maxLength="10"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primaryTextColor">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/register_next_step" />

    </RelativeLayout>

</RelativeLayout>